Prepared SpaceFX to run on JDK15 with records