@@ -10,9 +10,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.2'
-        classpath 'org.javamodularity:moduleplugin:1.6.0'
-        classpath 'org.beryx:badass-jlink-plugin:2.16.4'
-        classpath 'com.sandec.jpro:jpro-plugin-gradle:2019.2.4'
+        classpath 'org.javamodularity:moduleplugin:1.7.0'
+        classpath 'org.beryx:badass-jlink-plugin:2.22.3'
+        classpath 'com.sandec.jpro:jpro-plugin-gradle:2020.1.0'
     }
 }
 
@@ -35,36 +35,39 @@ repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 15
+targetCompatibility = 15
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
 
 dependencies {
-    implementation "org.openjfx:javafx-base:11:$platform"
-    implementation "org.openjfx:javafx-graphics:11:$platform"
-    implementation "org.openjfx:javafx-controls:11:$platform"
-    implementation "org.openjfx:javafx-media:11:$platform"
-    implementation "com.sandec.jpro:jpro-webapi:2019.2.3"
+    implementation "org.openjfx:javafx-base:15:$platform"
+    implementation "org.openjfx:javafx-graphics:15:$platform"
+    implementation "org.openjfx:javafx-controls:15:$platform"
+    implementation "org.openjfx:javafx-media:15:$platform"
+    implementation "com.sandec.jpro:jpro-webapi:2020.1.0"
     implementation "one.jpro:one.jpro.sound:0.1.0"
-
-    testCompile 'junit:junit:4.12'
-    testCompile "de.sandec:JMemoryBuddy:0.2.4"
-    testCompile("org.testfx:openjfx-monocle:jdk-11+26") {
-        exclude group: 'org.openjfx'
-    }
 }
 
 test {
     jvmArgs = ['-Dglass.platform=Monocle', '-Dmonocle.platform=Headless']
 }
 
-mainClassName = "$moduleName/eu.hansolo.spacefx.SpaceFX"
+mainClassName = '$moduleName/eu.hansolo.spacefx.SpaceFX'
 
 // To run SpaceFX in the browser with jPro use:
 task web() {
     mainClassName = "eu.hansolo.spacefx.SpaceFX"
     dependsOn jproRun
 }
-
 
 jar {
     from {
@@ -93,7 +96,7 @@ jpro {
     port             = 8080
     JVMArgs << '-Xmx1000m'
     visible          = false // Debug mode can also be used to create images via canvas and snapshot
-    noRenderJobs     = true // false to enable snapshot support
-    jproVersion      = "2019.2.4"
+    //noRenderJobs     = true // false to enable snapshot support
+    jproVersion      = "2020.1.0"
     openURLOnStartup = false
 }
